@@ -1,0 +1,41 @@
+[comment {-*- tcl -*- doctools manpage}]
+[manpage_begin debug_caller n 1]
+[copyright {2012, Andreas Kupries <andreas_kupries@users.sourceforge.net>}]
+[moddesc {debug narrative}]
+[titledesc {debug narrative - caller}]
+[category  {debugging, tracing, and logging}]
+[keywords debug trace log narrative]
+[require Tcl 8.5]
+[require debug::caller [opt 1]]
+[description]
+[para]
+
+[section API]
+
+[list_begin definitions]
+[call [cmd debug] [method caller]]
+
+This method is at its core a simple [example {[info level -1]}],
+making it useful in a tag-specific prefix to automatically
+provide caller information for all uses of the tag. Or in a
+message, when only specific places need such detail.
+
+[para] Beyond that it contains code recognizing the various
+internal forms of method calls generated by the [package snit]
+OO system and rewrites these to their original form, for
+better readability.
+
+[list_end]
+
+[section {BUGS, IDEAS, FEEDBACK}]
+
+This document, and the package it describes, will undoubtedly contain
+bugs and other problems.
+
+Please report such in the category [emph debug] of the
+[uri {http://sourceforge.net/tracker/?group_id=12883} {Tcllib SF Trackers}].
+
+Please also report any ideas for enhancements you may have for either
+package and/or documentation.
+
+[manpage_end]
