@@ -1,0 +1,38 @@
+[comment {-*- tcl -*- doctools manpage}]
+[manpage_begin debug n 1]
+[copyright {200?, Colin McCormack, Wub Server Utilities}]
+[copyright {2012, Andreas Kupries <andreas_kupries@users.sourceforge.net>}]
+[moddesc {debug narrative}]
+[titledesc {debug narrative - timestamping}]
+[category  {debugging, tracing, and logging}]
+[keywords debug trace log narrative timestamps]
+[require Tcl 8.5]
+[require debug [opt 1]]
+[description]
+[para]
+
+[section API]
+
+[list_begin definitions]
+
+[call [cmd debug] [method timestamp]]
+
+This method returns millisecond timing information since a baseline or
+last call, making it useful in a tag-specific prefix to automatically
+provide caller information for all uses of the tag. Or in a message,
+when only specific places need such detail.
+
+[list_end]
+
+[section {BUGS, IDEAS, FEEDBACK}]
+
+This document, and the package it describes, will undoubtedly contain
+bugs and other problems.
+
+Please report such in the category [emph debug] of the
+[uri {http://sourceforge.net/tracker/?group_id=12883} {Tcllib SF Trackers}].
+
+Please also report any ideas for enhancements you may have for either
+package and/or documentation.
+
+[manpage_end]
